refactored vFEB7th

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -7,34 +7,15 @@
 		padding: 5px;
 	}
 
-.addform
+header 
+	{
+		text-align: center;
+	}
+.taskform
 	{
 		border: 2px solid red;
-		width: 660px;
+		width: 800px;
 		padding: 5px;
-	}
-	
-#img1 img 
-	{
-		width: 20px;
-		left: 350px;
-		top: 200px;
-	}
-#img2 img 
-	{
-		width: 20px;
-		left: 10px;
-		top: 200px;
-	}
-#img3 img 
-	{
-		width: 20px;
-		left: 350px;
-	}
-#img4 img 
-	{
-		width: 20px;
-		left: 10px;
 	}
 
 #urgimp 
