--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Task Update</h1>
+<h1>To Do</h1>
 
-<p><%= render 'form' %></p>
+<p><%= render 'taskform' %></p>
+
+<%= button_to "Add a new Task", tasks_url %>
+
+<%= render 'print_all_priorities' %>
